[gd_scene load_steps=22 format=3 uid="uid://dj5mda5tinisp"]

[ext_resource type="Script" path="res://Board/Board.gd" id="2_xl8ws"]
[ext_resource type="Shader" path="res://Board/BoardBackground.gdshader" id="3_7tg6y"]
[ext_resource type="Script" path="res://Board/StageCamera.gd" id="3_sdio1"]
[ext_resource type="Texture2D" uid="uid://jc6ny48plub6" path="res://Assets/skins/default/bg.png" id="4_mnh1b"]
[ext_resource type="PackedScene" uid="uid://d3lv5svg7xhht" path="res://Resources/FinishButton.tscn" id="4_wnnrc"]
[ext_resource type="PackedScene" uid="uid://cjx67qhbqro41" path="res://Board/FinishPopup/FinishPopupContents.tscn" id="5_7xqhj"]
[ext_resource type="PackedScene" uid="uid://bqgqlnp8nk2x2" path="res://Scenes/Statbar/Statbar.tscn" id="5_30svg"]
[ext_resource type="Script" path="res://Board/BoardBackground.gd" id="5_cmoyn"]
[ext_resource type="Texture2D" uid="uid://bejgmt5gipy1l" path="res://Assets/sprites/icons.png" id="5_dt7ld"]
[ext_resource type="Script" path="res://Board/TimerLabel.gd" id="6_ybjxf"]
[ext_resource type="PackedScene" uid="uid://cumgux0onyrup" path="res://Board/StatusEffectsOverlay/StatusEffectsOverlay.tscn" id="11_ecybp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tfii4"]
shader = ExtResource("3_7tg6y")
shader_parameter/color_transform_enabled = false
shader_parameter/color_transform = Vector3(1, 0, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdh3x"]
atlas = ExtResource("5_dt7ld")
region = Rect2(0, 7, 8, 9)

[sub_resource type="LabelSettings" id="LabelSettings_8xeii"]
font_size = 8
font_color = Color(0.764706, 0.764706, 0.764706, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfjfs"]
atlas = ExtResource("5_dt7ld")
region = Rect2(8, 7, 8, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_duepo"]
atlas = ExtResource("5_dt7ld")
region = Rect2(16, 7, 8, 9)

[sub_resource type="Animation" id="Animation_ooyxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundCanvas:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinishPopup/ContentsAnchor:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FinishPopup/ContentsAnchor:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FinishPopup/BackgroundAnchor:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FinishPopup:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5v5so"]
resource_name = "board_exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundCanvas:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(16, 16)]
}

[sub_resource type="Animation" id="Animation_sh4k7"]
resource_name = "finish_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinishPopup/ContentsAnchor:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinishPopup/BackgroundAnchor:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FinishPopup:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xi6vj"]
resource_name = "finish_show"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinishPopup/ContentsAnchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinishPopup/ContentsAnchor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FinishPopup/BackgroundAnchor:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FinishPopup:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FinishPopup/ContentsAnchor/MarginContainer/FinishPopupContents")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_rewards"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oww2f"]
_data = {
"RESET": SubResource("Animation_ooyxe"),
"board_exit": SubResource("Animation_5v5so"),
"finish_hide": SubResource("Animation_sh4k7"),
"finish_show": SubResource("Animation_xi6vj")
}

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_xl8ws")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("3_sdio1")
move_speed = 300.0
shake_magnitude = 4.0

[node name="CellContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]
layer = -10
offset = Vector2(640, 360)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 640, 360)

[node name="Background" type="TextureRect" parent="BackgroundCanvas"]
unique_name_in_owner = true
top_level = true
material = SubResource("ShaderMaterial_tfii4")
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_mnh1b")
script = ExtResource("5_cmoyn")

[node name="ColorRect" type="ColorRect" parent="BackgroundCanvas"]
visible = false
anchors_preset = -1
anchor_left = -0.125
anchor_top = -0.125
anchor_right = 0.125
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="FinishPopup" type="CanvasLayer" parent="."]
layer = 15
visible = false
offset = Vector2(0, 360)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 360)

[node name="BackgroundAnchor" type="Node2D" parent="FinishPopup"]
unique_name_in_owner = true
scale = Vector2(1, 1e-05)

[node name="MarginContainer" type="MarginContainer" parent="FinishPopup/BackgroundAnchor"]
custom_minimum_size = Vector2(320, 80)
anchors_preset = -1
anchor_bottom = 0.5
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FinishPopup/BackgroundAnchor/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ContentsAnchor" type="Node2D" parent="FinishPopup"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 8)

[node name="MarginContainer" type="MarginContainer" parent="FinishPopup/ContentsAnchor"]
anchors_preset = -1
anchor_right = 0.5
offset_top = -40.0
offset_right = 320.0
offset_bottom = 40.0
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 6

[node name="FinishPopupContents" parent="FinishPopup/ContentsAnchor/MarginContainer" instance=ExtResource("5_7xqhj")]
unique_name_in_owner = true
layout_mode = 2

[node name="ForegroundCanvas" type="CanvasLayer" parent="."]
layer = 10

[node name="FinishButton" parent="ForegroundCanvas" instance=ExtResource("4_wnnrc")]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 20.0
offset_right = 92.0
offset_bottom = 76.0
grow_horizontal = 2

[node name="Statbar" parent="ForegroundCanvas" instance=ExtResource("5_30svg")]
anchors_preset = 12
anchor_right = 1.0
offset_right = -960.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ForegroundCanvas"]
anchors_preset = -1
offset_left = 12.0
offset_top = 16.0
scale = Vector2(4, 4)
theme_override_constants/separation = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ForegroundCanvas/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="TextureRect" type="TextureRect" parent="ForegroundCanvas/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_xdh3x")

[node name="TimerLabel" type="Label" parent="ForegroundCanvas/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_8xeii")
script = ExtResource("6_ybjxf")

[node name="HBoxContainer2" type="HBoxContainer" parent="ForegroundCanvas/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="TextureRect" type="TextureRect" parent="ForegroundCanvas/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_pfjfs")

[node name="MonstersLabel" type="Label" parent="ForegroundCanvas/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "23"
label_settings = SubResource("LabelSettings_8xeii")

[node name="HBoxContainer3" type="HBoxContainer" parent="ForegroundCanvas/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="TextureRect" type="TextureRect" parent="ForegroundCanvas/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_duepo")

[node name="PowerLabel" type="Label" parent="ForegroundCanvas/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "1-4"
label_settings = SubResource("LabelSettings_8xeii")

[node name="StageModsContainer" type="HBoxContainer" parent="ForegroundCanvas/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TweenerCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 20

[node name="StatusEffectsOverlay" parent="." instance=ExtResource("11_ecybp")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_oww2f")
}

[connection signal="pressed" from="ForegroundCanvas/FinishButton" to="." method="_on_finish_button_pressed"]
